Feature: News feed markup.

--- a/_resources/base/_variables.scss
+++ b/_resources/base/_variables.scss
@@ -3,4 +3,4 @@ $texto: #2B2B2B ;
 $color_institucional: #FFE000;
 $podcast: #2057A0;
 $font_primary: "Roobert", sans-serif;
-$breakpoint_mobile: "(max-width: 767px)";
+$breakpoint_mobile: "min-width: 767px";
